--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ members = [
     "crates/exex/exex/",
     "crates/exex/test-utils/",
     "crates/exex/types/",
+    "crates/exex/external-proofs/",
     "crates/metrics/",
     "crates/net/banlist/",
     "crates/net/discv4/",
