Simplify FlashBlockPendingSequence, removed PreparedFlashblock, added more comprehensive tests

--- a/crates/optimism/flashblocks/Cargo.toml
+++ b/crates/optimism/flashblocks/Cargo.toml
@@ -57,3 +57,4 @@ derive_more.workspace = true
 [dev-dependencies]
 test-case.workspace = true
 alloy-consensus.workspace = true
+op-alloy-consensus.workspace = true
