--- a/Cargo.toml
+++ b/Cargo.toml
@@ -739,6 +739,7 @@ vergen = "9.0.4"
 visibility = "0.1.1"
 walkdir = "2.3.3"
 vergen-git2 = "1.0.5"
+mockall = "0.13.1"
 
 # networking
 ipnet = "2.11"
