feat: add block timing metrics for production and execution (#41)
* feat: add block timing metrics for production and execution

Add detailed timing statistics for block production phases (build, insert)
and transaction execution (sequencer vs mempool transactions). Metrics are
displayed in block added logs to help monitor and optimize node performance.

- Track build phase: pre-execution changes, sequencer/mempool tx execution, finish
- Track insert phase: validation/execution, tree insertion
- Track transaction execution: separate timing for sequencer and mempool txs

* opimize code

* fix

* fix insert

* fix seq insert

* fix insert total

* optimize insert

* fix

* use indexMap to store block timing

* updata Cargo.lock

---------

Co-authored-by: ruiwei.guo <ruiwei.guo@okg.com>

--- a/crates/node/metrics/Cargo.toml
+++ b/crates/node/metrics/Cargo.toml
@@ -26,6 +26,7 @@ reqwest.workspace = true
 tracing.workspace = true
 eyre.workspace = true
 alloy-primitives.workspace = true
+indexmap.workspace = true
 
 [target.'cfg(unix)'.dependencies]
 tikv-jemalloc-ctl = { workspace = true, optional = true, features = ["stats"] }
