--- a/crates/node/events/Cargo.toml
+++ b/crates/node/events/Cargo.toml
@@ -19,6 +19,7 @@ reth-prune-types.workspace = true
 reth-static-file-types.workspace = true
 reth-primitives-traits.workspace = true
 reth-engine-primitives.workspace = true
+reth-node-metrics.workspace = true
 
 # ethereum
 alloy-primitives.workspace = true
