feat: add parallelizable iterator

--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -28,6 +28,8 @@ alloy-eips.workspace = true
 alloy-evm.workspace = true
 alloy-consensus.workspace = true
 
+rayon = { workspace = true, optional = true }
+
 auto_impl.workspace = true
 derive_more.workspace = true
 futures-util.workspace = true
@@ -63,3 +65,4 @@ test-utils = [
     "reth-ethereum-primitives/test-utils",
 ]
 op = ["alloy-evm/op", "reth-primitives-traits/op"]
+rayon = ["dep:rayon"]
