--- a/crates/net/downloaders/Cargo.toml
+++ b/crates/net/downloaders/Cargo.toml
@@ -67,6 +67,8 @@ assert_matches.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 rand.workspace = true
 tempfile.workspace = true
+alloy-rlp.workspace = true
+itertools.workspace = true
 
 [features]
 default = []
