--- a/Cargo.toml
+++ b/Cargo.toml
@@ -476,7 +476,7 @@ revm-database-interface = { version = "8.0.5", default-features = false }
 op-revm = { version = "14.1.0", default-features = false }
 revm-inspectors = "0.33.0"
 
-# eth
+# ethsd
 alloy-chains = { version = "0.2.5", default-features = false }
 alloy-dyn-abi = "1.4.1"
 alloy-eip2124 = { version = "0.2.0", default-features = false }
