--- a/crates/optimism/flashblocks/Cargo.toml
+++ b/crates/optimism/flashblocks/Cargo.toml
@@ -25,6 +25,7 @@ reth-errors.workspace = true
 reth-payload-primitives.workspace = true
 reth-storage-api.workspace = true
 reth-tasks.workspace = true
+reth-trie-common.workspace = true
 reth-metrics.workspace = true
 
 # alloy
