feat: implemented `OpProofStorage` Database metrics (#407)
Closes #224 
Closes #387

---------

Co-authored-by: Arun Dhyani <dhyaniarun7@gmail.com>

--- a/crates/optimism/bin/Cargo.toml
+++ b/crates/optimism/bin/Cargo.toml
@@ -25,11 +25,13 @@ reth-node-builder.workspace = true
 reth-db-api.workspace = true
 reth-chainspec.workspace = true
 reth-db.workspace = true
+reth-tasks.workspace = true
 
 clap = { workspace = true, features = ["derive", "env"] }
 tracing.workspace = true
 eyre.workspace = true
 futures-util.workspace = true
+tokio.workspace = true
 
 [lints]
 workspace = true
