feat: add StaticFileSegment::AccountChangeSets
chore: add changeset info to segment header

feat(provider): implement append_account_changeset

chore: formatting and more TODOs

chore: add stub for account_before_block

fix: use proper value for account changeset static files

feat: impl binary search for address in changeset

feat: finish writer fn, add tests

chore: add fallback to db when not found in static files

feat: add account_changesets_range to ChangesetReader

feat: add support for account changesets in IndexAccountHistory

feat: add support for account changesets in static file producer

chore: serialization changes

feat: add support for account changesets in db get

chore: docs and attempt to fix db get

fix: properly upgrade segment header serialize / deserialize

feat: add read-only segments

feat: add cli flag for enabling v2 static files

chore: remove Segment for AccountChangeSets

chore: add unreachable! for unreachable db get branch

chore: remove noisy traces

chore: make binary search more concise

feat: add support for account changeset static file pruning

feat: make HashedPostState::from_reverts work with static files

fix: don't write to db

chore: update book cli

chore: make clippy happy

chore: fix test compilation

chore: fix feat propagation

feat: add StaticFileRangeWalker skeleton

fix: fix inclusive ranges

feat: impl removal for changesets in exec unwind

chore: replace prefixsetloader with fn that uses provider

chore(trie): propagate errors from root methods

chore: make clippy happy

chore: no underscores

chore(static-file): call increment_block when appending account changesets

chore(merkle-changesets): add logs for changeset reverts

fix: return 0 for start

feat: add account_changeset_count to ChangeSetReader

fix: introduce walker to prevent OOM in IndexAccountHistory

fix: remove static file v2 read-only segment stuff

chore: remove traces

feat: add storage_settings branches

chore: backwards compat segment header writ

--- a/crates/stages/stages/Cargo.toml
+++ b/crates/stages/stages/Cargo.toml
@@ -33,6 +33,7 @@ reth-execution-types.workspace = true
 reth-ethereum-primitives = { workspace = true, optional = true }
 reth-prune.workspace = true
 reth-prune-types.workspace = true
+reth-storage-api.workspace = true
 reth-storage-errors.workspace = true
 reth-revm.workspace = true
 reth-stages-api.workspace = true
