--- a/crates/static-file/types/Cargo.toml
+++ b/crates/static-file/types/Cargo.toml
@@ -16,7 +16,7 @@ alloy-primitives.workspace = true
 
 clap = { workspace = true, features = ["derive"], optional = true }
 derive_more.workspace = true
-serde = { workspace = true, features = ["derive"] }
+serde = { workspace = true, features = ["alloc", "derive"] }
 strum = { workspace = true, features = ["derive"] }
 
 [dev-dependencies]
