--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -186,8 +186,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
-      - run: cargo build --bin reth --workspace --features ethereum
-      - run: cargo build --bin op-reth -p op-reth --workspace --features ethereum
+      - run: cargo build --bin reth --workspace
+      - run: cargo build --bin op-reth --workspace
         env:
           RUSTFLAGS: -D warnings
       - run: ./docs/cli/update.sh target/debug/reth target/debug/op-reth
