fix: review comment

--- a/crates/net/network-types/Cargo.toml
+++ b/crates/net/network-types/Cargo.toml
@@ -23,6 +23,9 @@ serde = { workspace = true, optional = true }
 humantime-serde = { workspace = true, optional = true }
 serde_json = { workspace = true, features = ["std"] }
 
+# discv5
+discv5 = { workspace = true }
+
 # misc
 tracing.workspace = true
 
