--- a/.github/workflows/e2e-op-historical-proof.yml
+++ b/.github/workflows/e2e-op-historical-proof.yml
@@ -48,10 +48,15 @@ jobs:
         run: |
           kurtosis engine start
 
+      - name: Build op-reth with coverage
+        working-directory: crates/optimism/tests
+        run: |
+          make build-with-cov
+
       - name: Run DEVNET
         working-directory: crates/optimism/tests
         run: |
-          make all DEVNET=opgeth-seq-opreth-val
+          make run DEVNET=opgeth-seq-opreth-val
 
       - name: Run core e2e tests
         working-directory: crates/optimism/tests
@@ -62,6 +67,46 @@ jobs:
         working-directory: crates/optimism/tests
         run: |
           make test-e2e-kurtosis GO_PKG_NAME=proofs/reorg DEVNET=opgeth-seq-opreth-val
+
+      - name: Flush coverage data
+        working-directory: crates/optimism/tests
+        run: |
+          mkdir -p ./coverage
+          CONTAINER=$(docker ps -aq --filter "name=op-reth" | head -n 1)
+          if [ -z "$CONTAINER" ]; then
+              echo "No op-reth container found"
+              exit 1
+          fi
+          docker stop "$CONTAINER"
+          sleep 5
+          docker cp "$CONTAINER":/coverage ./coverage
+          docker start "$CONTAINER"
+
+      - name: Install llvm
+        run: |
+          sudo apt-get update 
+          sudo apt-get install -y llvm
+
+      - name: Merge coverage files
+        working-directory: crates/optimism/tests
+        run: |
+          llvm-profdata merge -sparse ./coverage/*.profraw -o ./coverage/coverage.profdata
+
+      - name: Generate coverage report
+        working-directory: crates/optimism/tests
+        run: |
+          llvm-cov export ./coverage/op-reth -instr-profile=./coverage/coverage.profdata -format=lcov --path-equivalence=/app/,/Users/arundhyani/Stuff/Project/chainsafe/op-reth/ -ignore-filename-regex="/rustc/|/usr/local/cargo/registry/|/target/release/build/" > ./coverage/coverage.lcov
+
+      - name: Upload coverage to codecov.io
+        uses: codecov/codecov-action@v5
+        with:
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/coverage.lcov
+          flags: e2e
+          env_vars: OS,RUST
+          name: reth-kurtosis-tests
+          verbose: true
 
   op-reth-as-sequencer:
     name: op-reth as sequencer e2e tests
