--- a/crates/storage/provider/Cargo.toml
+++ b/crates/storage/provider/Cargo.toml
@@ -54,7 +54,9 @@ parking_lot.workspace = true
 dashmap = { workspace = true, features = ["inline"] }
 strum.workspace = true
 eyre.workspace = true
-rocksdb.workspace = true
+
+# rocksdb: jemalloc is recommended production workload
+rocksdb = { workspace = true, features = ["jemalloc"] }
 
 # test-utils
 reth-ethereum-engine-primitives = { workspace = true, optional = true }
