add missed config

--- a/examples/rpc-db/Cargo.toml
+++ b/examples/rpc-db/Cargo.toml
@@ -11,3 +11,4 @@ jsonrpsee.workspace = true
 reth-ethereum = { workspace = true, features = ["test-utils", "node", "provider", "pool", "network", "rpc"] }
 tokio = { workspace = true, features = ["full"] }
 eyre.workspace = true
+reth-rpc-server-types.workspace = true
