wip: switch over to StateDB

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -735,6 +735,8 @@ vergen-git2 = "9.1.0"
 ipnet = "2.11"
 
 [patch.crates-io]
+alloy-op-evm = { git = "https://github.com/0xforerunner/evm", rev = "0833666" }
+alloy-evm = { git = "https://github.com/0xforerunner/evm", rev = "0833666" }
 # alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
 # alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "3049f232fbb44d1909883e154eb38ec5962f53a3" }
