--- a/crates/storage/provider/Cargo.toml
+++ b/crates/storage/provider/Cargo.toml
@@ -55,15 +55,16 @@ dashmap = { workspace = true, features = ["inline"] }
 strum.workspace = true
 eyre.workspace = true
 
-# rocksdb: jemalloc is recommended production workload
-rocksdb = { workspace = true, features = ["jemalloc"] }
-
 # test-utils
 reth-ethereum-engine-primitives = { workspace = true, optional = true }
 tokio = { workspace = true, features = ["sync"], optional = true }
 
 # parallel utils
 rayon.workspace = true
+
+[target.'cfg(unix)'.dependencies]
+# rocksdb: jemalloc is recommended production workload
+rocksdb = { workspace = true, features = ["jemalloc"] }
 
 [dev-dependencies]
 reth-db = { workspace = true, features = ["test-utils"] }
