chore: run workflow(especially codecoverage) on merge (#428)
Attempt to fix #406

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -5,7 +5,7 @@ on:
   # TODO: Disabled temporarily for https://github.com/CodSpeedHQ/runner/issues/55
   # merge_group:
   push:
-    branches: [main]
+    branches: [unstable, main]
 
 env:
   CARGO_TERM_COLOR: always
