--- a/.github/workflows/compact.yml
+++ b/.github/workflows/compact.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
   merge_group:
   push:
-    branches: [main]
+    branches: [unstable, main]
 
 env:
   CARGO_TERM_COLOR: always
