--- a/crates/node/core/Cargo.toml
+++ b/crates/node/core/Cargo.toml
@@ -46,17 +46,18 @@ alloy-consensus.workspace = true
 alloy-eips.workspace = true
 
 # misc
-eyre.workspace = true
-clap = { workspace = true, features = ["derive", "env"] }
-humantime.workspace = true
-rand.workspace = true
+clap = { workspace = true, features = ["derive", "env", "string"] }
 derive_more.workspace = true
-toml.workspace = true
+eyre.workspace = true
+humantime.workspace = true
+ipnet.workspace = true
+itertools.workspace = true
+rand.workspace = true
 serde.workspace = true
 strum = { workspace = true, features = ["derive"] }
 thiserror.workspace = true
+toml.workspace = true
 url.workspace = true
-ipnet.workspace = true
 # io
 dirs-next.workspace = true
 shellexpand.workspace = true
