feat(node): tx pool args defaults (#20136)

--- a/crates/node/core/Cargo.toml
+++ b/crates/node/core/Cargo.toml
@@ -47,7 +47,7 @@ alloy-eips.workspace = true
 
 # misc
 eyre.workspace = true
-clap = { workspace = true, features = ["derive", "env"] }
+clap = { workspace = true, features = ["derive", "env", "string"] }
 humantime.workspace = true
 rand.workspace = true
 derive_more.workspace = true
