--- a/crates/era/Cargo.toml
+++ b/crates/era/Cargo.toml
@@ -18,9 +18,6 @@ alloy-eips.workspace = true
 alloy-primitives.workspace = true
 alloy-rlp.workspace = true
 
-# ligthouse consensus types
-consensus-types = { git = "https://github.com/sigp/lighthouse", package = "types", optional = true }
-
 # compression and decompression
 snap.workspace = true
 
@@ -29,6 +26,7 @@ ethereum_ssz.workspace = true
 ethereum_ssz_derive.workspace = true
 
 [dev-dependencies]
+consensus-types = { git = "https://github.com/sigp/lighthouse", package = "types" }
 eyre.workspace = true
 rand.workspace = true
 reqwest.workspace = true
