feat(persistence): implement RocksDB provider (#20071)
Co-authored-by: Dan Cline <6798349+Rjected@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -652,6 +652,9 @@ c-kzg = "2.1.5"
 # config
 toml = "0.8"
 
+# rocksdb
+rocksdb = { version = "0.24" }
+
 # otlp obs
 opentelemetry_sdk = "0.31"
 opentelemetry = "0.31"
