--- a/Cargo.toml
+++ b/Cargo.toml
@@ -775,16 +775,16 @@ alloy-transport-ws = { git = "https://github.com/Soubhik-10/alloy", branch = "ba
 revm = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
 alloy-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "new-approach4" }
 alloy-op-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "new-approach4" }
-revm-bytecode = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-revm-database = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-revm-state = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-revm-interpreter = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-revm-inspector = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-revm-context = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-revm-context-interface = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-revm-database-interface = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
-op-revm = { git = "https://github.com/bluealloy/revm", branch = "rakita/bal" }
+revm-bytecode = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
+revm-database = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
+revm-state = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
+revm-primitives = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
+revm-interpreter = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
+revm-inspector = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
+revm-context = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
+revm-context-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
+revm-database-interface = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
+op-revm = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
 #
 # jsonrpsee = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
 # jsonrpsee-core = { git = "https://github.com/paradigmxyz/jsonrpsee", branch = "matt/make-rpc-service-pub" }
