--- a/Cargo.toml
+++ b/Cargo.toml
@@ -772,6 +772,7 @@ alloy-transport-ws = { git = "https://github.com/Soubhik-10/alloy", branch = "ba
 # op-alloy-rpc-jsonrpsee = { git = "https://github.com/alloy-rs/op-alloy", rev = "a79d6fc" }
 #
 # revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", rev = "1207e33" }
+# need to change to bluealloy
 revm = { git = "https://github.com/Rimeeeeee/revm", branch = "rakita/bal" }
 alloy-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "new-approach4" }
 alloy-op-evm = { git = "https://github.com/Rimeeeeee/evm", branch = "new-approach4" }
