--- a/crates/era/Cargo.toml
+++ b/crates/era/Cargo.toml
@@ -9,6 +9,9 @@ homepage.workspace = true
 repository.workspace = true
 exclude.workspace = true
 
+[package.metadata.cargo-udeps.ignore]
+development = ["consensus-types"]
+
 [dependencies]
 thiserror.workspace = true
 
