--- a/deny.toml
+++ b/deny.toml
@@ -8,8 +8,6 @@ ignore = [
     "RUSTSEC-2024-0384",
     # https://rustsec.org/advisories/RUSTSEC-2024-0436 paste! is unmaintained
     "RUSTSEC-2024-0436",
-    # https://rustsec.org/advisories/RUSTSEC-2024-0388 derivative is unmaintained, used by Lighthouse consensus-types dev-dependency
-    "RUSTSEC-2024-0388",
 ]
 
 # This section is considered when running `cargo deny check bans`.
@@ -24,11 +22,7 @@ highlight = "all"
 # List of crates to deny
 deny = [{ name = "openssl" }]
 # Certain crates/versions that will be skipped when doing duplicate detection.
-skip = [
-    # Lighthouse consensus-types pulls in older base64 versions
-    { name = "base64", version = "0.13.1" },
-    { name = "base64", version = "0.21.7" },
-]
+skip = []
 # Similarly to `skip` allows you to skip certain crates during duplicate
 # detection. Unlike skip, it also includes the entire tree of transitive
 # dependencies starting at the specified crate, up to a certain depth, which is
@@ -95,5 +89,4 @@ allow-git = [
     "https://github.com/alloy-rs/evm",
     "https://github.com/alloy-rs/hardforks",
     "https://github.com/paradigmxyz/jsonrpsee",
-    "https://github.com/sigp/lighthouse",
 ]
