feat: Implemented `OpProofStoragePrunerTask` (#375)
Closes #361 
Closes #395

---------

Co-authored-by: Emilia Hane <elsaemiliaevahane@gmail.com>

--- a/crates/optimism/bin/Cargo.toml
+++ b/crates/optimism/bin/Cargo.toml
@@ -32,6 +32,7 @@ tracing.workspace = true
 eyre.workspace = true
 futures-util.workspace = true
 tokio.workspace = true
+humantime.workspace = true
 
 [lints]
 workspace = true
