remove docker-related makefile recipes

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -102,8 +102,7 @@ jobs:
       - name: Extract tag
         id: extract_tag
         run: |
-          TAG=${GITHUB_REF#refs/tags/}
-          echo "tag=$TAG" >> $GITHUB_OUTPUT
+          echo "tag=$GITHUB_REF_NAME" >> $GITHUB_OUTPUT
           if [[ "$TAG" == *"-rc"* ]]; then
             echo "is_rc=true" >> $GITHUB_OUTPUT
           else
