Add CLI flag to allow choice of compression alg in HTTP responses

--- a/crates/rpc/rpc-layer/Cargo.toml
+++ b/crates/rpc/rpc-layer/Cargo.toml
@@ -12,6 +12,7 @@ workspace = true
 
 [dependencies]
 alloy-rpc-types-engine = { workspace = true, features = ["jwt", "serde"] }
+reth-rpc-server-types.workspace = true
 
 http.workspace = true
 jsonrpsee-http-client.workspace = true
