Revert "ci: run on ubuntu instead of reth runner (#20196)"
This reverts commit f633efc9691d933c6a14e9bad9386679e358a930.

--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -15,7 +15,8 @@ env:
 name: bench
 jobs:
   codspeed:
-    runs-on: ubuntu-latest
+    runs-on:
+      group: Reth
     steps:
       - uses: actions/checkout@v6
         with:
