--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -23,7 +23,8 @@ jobs:
   test:
     name: test / ${{ matrix.network }}
     if: github.event_name != 'schedule'
-    runs-on: ubuntu-latest
+    runs-on:
+      group: Reth
     env:
       RUST_BACKTRACE: 1
     strategy:
