--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -22,7 +22,8 @@ jobs:
     name: stage-run-test
     # Only run stage commands test in merge groups
     if: github.event_name == 'merge_group'
-    runs-on: ubuntu-latest
+    runs-on:
+      group: Reth
     env:
       RUST_LOG: info,sync=error
       RUST_BACKTRACE: 1
