--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -19,7 +19,8 @@ concurrency:
 jobs:
   test:
     name: test / ${{ matrix.type }} (${{ matrix.partition }}/${{ matrix.total_partitions }})
-    runs-on: ubuntu-latest
+    runs-on:
+      group: Reth
     env:
       RUST_BACKTRACE: 1
     strategy:
@@ -64,7 +65,8 @@ jobs:
 
   state:
     name: Ethereum state tests
-    runs-on: ubuntu-latest
+    runs-on:
+      group: Reth
     env:
       RUST_LOG: info,sync=error
       RUST_BACKTRACE: 1
@@ -98,7 +100,8 @@ jobs:
 
   doc:
     name: doc tests
-    runs-on: ubuntu-latest
+    runs-on:
+      group: Reth
     env:
       RUST_BACKTRACE: 1
     timeout-minutes: 30
