--- a/.github/workflows/compact.yml
+++ b/.github/workflows/compact.yml
@@ -17,7 +17,7 @@ env:
 name: compact-codec
 jobs:
   compact-codec:
-    runs-on: depot-ubuntu-latest
+    runs-on: depot-ubuntu-latest-16
     strategy:
       matrix:
         bin:
