--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -163,7 +163,7 @@ jobs:
 
   udeps:
     name: udeps
-    runs-on: depot-ubuntu-latest
+    runs-on: depot-ubuntu-latest-16
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v6
