--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -279,6 +279,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: dtolnay/rust-toolchain@stable
+      - uses: mozilla-actions/sccache-action@v0.0.9
       - uses: rui314/setup-mold@v1
       - uses: taiki-e/cache-cargo-install-action@v2
         with:
