fix innertx timeout (#58)
* fix innertx timeout

* fix timeout

* revert

* fix

* write_internal_transactions

* add ENABLE_INNER_TX

* fmt

* Update execution.rs

* fmt

---------

Co-authored-by: Vui-Chee <vuicheesiew@gmail.com>

--- a/crates/engine/tree/Cargo.toml
+++ b/crates/engine/tree/Cargo.toml
@@ -73,6 +73,8 @@ reth-stages = { workspace = true, optional = true }
 reth-static-file = { workspace = true, optional = true }
 reth-tracing = { workspace = true, optional = true }
 
+xlayer-db.workspace = true
+
 [dev-dependencies]
 # reth
 reth-evm-ethereum = { workspace = true, features = ["test-utils"] }
