--- a/crates/ethereum/node/Cargo.toml
+++ b/crates/ethereum/node/Cargo.toml
@@ -61,6 +61,8 @@ reth-node-core.workspace = true
 reth-e2e-test-utils.workspace = true
 reth-tasks.workspace = true
 reth-testing-utils.workspace = true
+tempfile.workspace = true
+jsonrpsee-core.workspace = true
 
 alloy-primitives.workspace = true
 alloy-provider.workspace = true
